Add new features to django_cloud_browser AWS S3.
- Upload a file.
- Create a new directory.
- Delete a file or a directory.
- Rename a file or a directory.
- Move a file to another directory.

cloud/base.py
    - Add generic methods to base.py.

cloud/boto_base.py, cloud/aws.py
    - Realize generic methods for AWS under cloud/boto_base.py, and upload form
      under cloud/aws.py.
    - Support show, delete, move, rename for directory keys and pseudo-directories.
    - Directory key: A key stored in S3 used to represent a directory, and its
      name ends with "/". For example: "foo/bar/".
    - Pseduo-direcotory: The direcotory does not has a real key saved in S3.
      For example: "foo/bar/baz", there are no keys "foo/" and "foo/bar/" in
      S3.

cloud/fs.py
    - Implement the file operations method for the local Filesystem, except
      upload.

views.py
    - Add upload, mkdir, delete, rename, and move views. (Some code might be
      still specific for S3, need to improve it.)
    - Support different backend datastores upload html forms.

common.py.
    - Modify path_join(), so that with inputs "foo/", "bar", it will return
      "foo/bar", not "foo//bar".
    - Add path_join_sep(), which returns a path ends with "/", we can use this
      method to get directory path (maybe specific for s3 only).

Templates:
    - Add rename, move template files.
    - Improve template file _browser.html.
        - Add upload, mkdir, delete, rename, move html forms.
        - Insert 3 columns (Delete, Rename, Move to).

Icons:
    - Use the tango project icons for mkdir/delete/rename/move.

Admin site:
    - Add rename, move block div to admin/base.html.
    - Add rename and move admin template files, which are with admin/base.html.
    - Add the file operations urls to admin site.

--- a/cloud_browser/templates/cloud_browser/_browser.html
+++ b/cloud_browser/templates/cloud_browser/_browser.html
@@ -26,6 +26,19 @@
 
 <div id="cloud-browser-objects">
 <h2>Objects</h2>
+{% if container%}
+    {% if upload_form %}
+        {{ upload_form | safe }}
+    {% endif %}
+    <form method="post" action="{{ mkdir_action }}">
+        {% csrf_token %}
+        <input type="hidden" name="container_name" value="{{ container.name }}">
+        <input type="hidden" name="wd_path" value="{{wd_path}}">
+        <input type="image" src="{% cloud_browser_media_url 'img/tango/16x16/action/folder-new.png' %}" alt="Submit" align="middle">
+        <input type="text" name="dir_basename" size=20 value="New Directory">
+    </form>
+{% endif %}
+
 {% if objects %}
 <table id="cloud-browser-objects-table">
   <thead>
@@ -34,8 +47,12 @@
       <th>Name</th>
       <th>Content Type</th>
       <th>Encoding</th>
+      <th>Modified by</th>
       <th>Size (Bytes)</th>
       <th>Date</th>
+      <th>Delete</th>
+      <th>Rename</th>
+      <th>Move to ...</th>
     </tr>
   </thead>
   <tbody>
@@ -65,6 +82,11 @@
             {% else %}--{% endif %}
         </td>
         <td>
+            {% if obj.modified_by %}
+                {{ obj.modified_by }}
+            {% else %}--{% endif %}
+        </td>
+        <td>
             {% if obj.is_file or obj.size > 0 %}
                 {{ obj.size|filesizeformat }}
             {% else %}--{% endif %}
@@ -74,12 +96,42 @@
                 {{ obj.last_modified|date:'DATETIME_FORMAT' }}
             {% else %}--{% endif %}
         </td>
+        <td><center>
+            <form id="cloud-browser-delete" class="cloud-browser-form" method="POST" action="{{ delete_action }}" data-confirm="Are you sure to delete this?">
+                {% csrf_token %}
+                <input type="hidden" name="container_name" value="{{ container.name }}">
+                <input type="hidden" name="src_path" value="{{ obj.name }}">
+                <input type="hidden" name="is_file" value="{{ obj.is_file }}">
+                <input type="image" src="{% cloud_browser_media_url 'img/tango/16x16/action/edit-delete.png' %}" alt="Submit">
+            </form>
+        </center></td>
+        <td><center>
+            <form id="cloud-browser-rename" class="cloud-browser-form" method="get" action={% url 'rename' %} >
+                <input type="hidden" name="container_name" value="{{ container.name }}">
+                <input type="hidden" name="src_path" value="{{ obj.name }}">
+                <input type="hidden" name="is_file" value="{{ obj.is_file }}">
+                <input type="hidden" name="wd_path" value="{{ wd_path }}">
+                <input type="image" src="{% cloud_browser_media_url 'img/tango/16x16/action/edit-copy.png' %}" alt="Submit" width="16" height="16">
+            </form>
+        </center></td>
+        <td><center>
+            {% if obj.is_file %}
+                <form id="cloud-browser-move" class="cloud-browser-form" method="get" action={% url 'move' %}>
+                    <input type="hidden" name="container_name" value="{{ container.name }}">
+                    <input type="hidden" name="src_path" value="{{ obj.name }}">
+                    <input type="hidden" name="is_file" value="{{ obj.is_file }}">
+                    <input type="hidden" name="wd_path" value="{{ wd_path }}">
+                    <input type="image" src="{% cloud_browser_media_url 'img/tango/16x16/action/format-indent-more.png' %}" alt="Submit" width="16" height="16">
+                </form>
+            {% else %}--{% endif %}
+        </center></td>
       </tr>
     {% endfor %}
   </tbody>
+
   <tfoot>
     <tr>
-      <td colspan="6">
+      <td colspan="10">
         {% if marker_part %}
         <form id="cloud-browser-next" class="cloud-browser-form"
           action="{% url "cloud_browser_browser" path|urlencode %}" method="post">
@@ -118,4 +170,12 @@
 {% endif %}
 </div>
 </div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>
+$(function() {
+    $("form.cloud-browser-form[data-confirm]").on('click Submit', function(){
+        return confirm($(this).data("confirm"));
+    });
+});
+</script>
 {% endblock %}
