--- a/cloud_browser/templates/cloud_browser/base.html
+++ b/cloud_browser/templates/cloud_browser/base.html
@@ -19,6 +19,9 @@
   <div id="cloud-browser-breadcrumbs" class="cloud-browser-defaults">
     {% block cloud_browser_breadcrumbs %}{% endblock %}
   </div>
+  <div id="cloud-browser-messages">
+    {% block cloud_browser_messages %}{% endblock %}
+  </div>
   <div id="cloud-browser-content">
     {% block cloud_browser_content %}{% endblock %}
   </div>
