--- a/cloud_browser/templates/cloud_browser/admin/base.html
+++ b/cloud_browser/templates/cloud_browser/admin/base.html
@@ -31,6 +31,12 @@
     <div id="cloud-browser-content">
       {% block cloud_browser_content %}{% endblock %}
     </div>
+    <div id="rename">
+      {% block rename %}{% endblock %}
+    </div>
+    <div id="move">
+      {% block move %}{% endblock %}
+    </div>
   {% endblock %}
 {% endblock %}
 
