--- a/cloud_browser/templates/cloud_browser/browser.html
+++ b/cloud_browser/templates/cloud_browser/browser.html
@@ -23,6 +23,16 @@ Cloud Browser - {{ path }}
     src="{% cloud_browser_media_url 'js/browser.js' %}"></script>
 {% endblock %}
 
+{% block cloud_browser_messages %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endblock %}
+
 {% block cloud_browser_content %}
     {% include "cloud_browser/_browser.html" %}
 {% endblock %}
