--- a/cloud_browser/templates/cloud_browser/base.html
+++ b/cloud_browser/templates/cloud_browser/base.html
@@ -19,7 +19,7 @@
   <div id="cloud-browser-breadcrumbs" class="cloud-browser-defaults">
     {% block cloud_browser_breadcrumbs %}{% endblock %}
   </div>
-  <div id="cloud-browser-messages">
+  <div id="cloud-browser-messages" class="cloud-browser-defaults">
     {% block cloud_browser_messages %}{% endblock %}
   </div>
   <div id="cloud-browser-content">
