--- a/cloud_browser/templates/cloud_browser/browser.html
+++ b/cloud_browser/templates/cloud_browser/browser.html
@@ -25,11 +25,7 @@ Cloud Browser - {{ path }}
 
 {% block cloud_browser_messages %}
 {% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
+    {% cloud_browser_messages messages %}
 {% endif %}
 {% endblock %}
 
